# max_bandwidth

./: CMakeLists.txt  Makefile  graph.c  graph.h  graph.py  heap.c  heap.h  heap.py  infect.c  infect.h  main.c  maxbw.c  maxbw.py  parameters.h  testbench.py  uf.c  uf.h  uf.py
testcases/: graph.1  graph.1.1  graph.1.100  graph.1.1000  graph.1.101  graph.1.2  graph.1.3  graph.1.888  graph.raw
testcases/3_sparse/: graph
